fix img overflow

--- a/src/blocks/meetingCard.css
+++ b/src/blocks/meetingCard.css
@@ -1,5 +1,4 @@
 .meetingCard__img {
-
   margin: 0;
   padding: 0;
   object-fit: cover;
@@ -12,7 +11,7 @@
   font-weight: 700;
   font-size: 60px;
   line-height: 65px;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 0 0px 28px 0;
   margin: 0;
 }
@@ -20,7 +19,7 @@
   margin: 0;
   padding-bottom: 60px;
 }
-.meetingCard__link{
+.meetingCard__link {
   font-family: 'Archivo';
   font-style: normal;
   font-weight: 600;
@@ -29,7 +28,7 @@
   letter-spacing: 0.02em;
   color: #ffffff;
 }
-.meetingCard__link:hover{
+.meetingCard__link:hover {
   opacity: 0.9;
 }
 .meetingCard__icon {
@@ -41,25 +40,21 @@
   margin: 0;
   margin-left: 12px;
 }
-.meetingCard__button:hover{
+.meetingCard__button:hover {
   background: rgba(255, 255, 255, 0.9);
-  color:#D2390E;
+  color: #d2390e;
   cursor: pointer;
 }
 
-@media only screen and  (max-width: 700px){
-  .meetingCard__img{
-  border-radius: 10px 10px 0 0;
-  max-height: 268px;
-  object-fit: cover;
-  
-}
-.meetingCard__header{
-  padding: 0 0 24px;
-  font-size: 52px;
-  line-height: 57px;
-  
-  
-}
-
+@media only screen and (max-width: 800px) {
+  .meetingCard__img {
+    border-radius: 10px 10px 0 0;
+    height: 268px;
+    object-fit: cover;
+  }
+  .meetingCard__header {
+    padding: 0 0 24px;
+    font-size: 52px;
+    line-height: 57px;
+  }
 }
